--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         .hr{
             border: 0;
-            border-top: 1px solid rgba(78, 69, 202, 0.753); /* You can adjust this color as needed */
+            border-top: 1px solid rgba(78, 69, 202, 0.753); 
 
             margin: 20px 0;
         }
@@ -17,14 +17,14 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-6"></div>
-            <div class="col-6">azooz.n40@hotmail.com</div>
-            <h1 class="col-6">ABDUALAZIZ <br> ALRUWAILY</h1>
-            <div class="col-6">Jeddah, Saudi Arabia
-                <br> +966 55 882 9738
+            <div class="col-6">
+                <h1>ABDUALAZIZ <br> ALRUWAILY</h1>
             </div>
-
-            
+            <div class="col-6 text-md-right" >
+                azooz.n40@hotmail.com<br>
+                Jeddah, Saudi Arabia<br>
+                +966 55 882 9738
+            </div>
         </div>
         <div class="hr"></div>
         <p>Seeking a challenging computer science position to apply skills in software development, data analysis, and machine learning. I'm particularly interested in web development, full stack in particular. Passionate about learning new technologies and contributing to organizational growth. Strong team player, quick learner, and effective problem-solver.</p>
