--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="list-group-item col-lg-6 col-sm-12">&bull; Problem-solving</div>
             <div class="list-group-item col-lg-6 col-sm-12">&bull; Typing Speed: 170 words per minute – acc 99%</div>
             <div class="list-group-item col-lg-6 col-sm-12">&bull; Quick-learner</div>
-            <div class="list-group-item col-lg-6 col-sm-12">&bull; Advanced level using React / Node.js / Bootstrap</div>
+            <div class="list-group-item col-lg-6 col-sm-12">&bull; Advanced level using React / Node.js / jQuery / EJS / DOM </div>
         </div>
         
         </div>
