--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
             </div>
         </div>
         <div class="hr"></div>
-        <p>Seeking a challenging computer science position to apply skills in software development, data analysis, and machine learning. I'm particularly interested in web development, full stack in particular. Passionate about learning new technologies and contributing to organizational growth. Strong team player, quick learner, and effective problem-solver.</p>
+        <p>Seeking a challenging computer science position to apply skills in software development, data analysis, and machine learning.
+I'm particularly interested in web development (Full stack). Passionate about learning new technologies and contributing to 
+organizational growth. Strong team player, quick learner, and effective problem-solver.
+</p>
         <div class="hr"></div>
         <h1>EDUCATION</h1>
         <h3>BACHELOR OF COMPUTER SCIENCE</h3>
